[new] better cold intro [new] mvc example [fix] nav disclosure shows left/right vs down/right [tweak] code is now in dark-accent color [fix] modal-test text [tweak] overflow for dialog component

--- a/css/b8r.css
+++ b/css/b8r.css
@@ -515,7 +515,7 @@ pre {
 
 code,
 .code {
-  color: var(--code-text-color);
+  color: var(--dark-accent-color);
   font: var(--code-font);
 }
 
